--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,27 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
+.container{
+  display: flex;
+  margin-top: 25px;
+}
+
+.box{
+  text-align: center;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text{
+  max-width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
