--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -4,6 +4,9 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: Roboto, sans-serif;
 }
 
@@ -23,4 +26,44 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header, .footer{
+  display: flex;
+  padding: 0px 15px;
+  justify-content: space-between;
+}
+
+.left-links, .right-links{
+  display: flex;
+  gap: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: rgb(97, 96, 96);
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+}
+
+.footer{
+  background-color: rgb(235, 235, 235);
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons button{
+  padding: 7px 15px;
+  font-size: 15px;
+}
+
+.buttons{
+  margin-top: 20px;
 }
