--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,22 +2,32 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+  padding-left: 20px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 250px;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -26,4 +36,34 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 320px;
+  max-height: 400px;
+  padding: 10px;
+}
+
+.content{
+  display: flex;
+  flex: 1;
+}
+
+.cards{
+  display: flex;
+  padding: 30px;
+  gap: 15px;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.sidebar ul{
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 20px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
